--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "simple-home-dir"
-version = "0.1.2"
+version = "0.1.3"
 edition = "2021"
 
 license = "MIT"
 repository = "https://github.com/splurf/simple-home-dir"
 authors = ["Evan Schwartzentruber <evandotschwartzentruber@gmail.com>"]
-description = "A simple and miniscule library allowing one to easily access the user's home directory."
+description = "A simple and minuscule library allowing one to easily access the user's home directory."
 keywords = ["home", "directory", "tilde"]
 categories = ["accessibility"]
 
