--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -11,8 +11,7 @@ env:
 
 jobs:
   build:
-
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, ubuntu-latest, windows-latest, macos-latest]
 
     steps:
     - uses: actions/checkout@v3
