fully modulable now

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "simple-home-dir"
-version = "0.1.7"
+version = "0.2.0"
 edition = "2021"
 
 license = "MIT"
@@ -26,5 +26,7 @@ default-features = false
 features = ["Win32_System_Com_CallObj", "Win32_Foundation", "Win32_Globalization", "Win32_UI_Shell_Common"]
 
 [features]
-test = ["dirs", "expand_tilde"]
+default = ["home_dir"]
+test = ["dirs", "expand_tilde", "home_dir"]
 expand_tilde = []
+home_dir = []
