--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "simple-home-dir"
-version = "0.2.0"
+version = "0.2.1"
 edition = "2021"
 
 license = "MIT"
@@ -11,9 +11,9 @@ keywords = ["home", "directory", "tilde"]
 categories = ["accessibility"]
 
 [profile.release]
-strip = true
-opt-level = "z"
 lto = "thin"
+overflow-checks = false
+codegen-units = 1
 
 [dependencies.dirs]
 version = "5.0.1"
@@ -21,9 +21,9 @@ default-features = false
 optional = true
 
 [target.'cfg(windows)'.dependencies.windows-sys]
-version = "0.48.0"
+version = "0.52.0"
 default-features = false
-features = ["Win32_System_Com_CallObj", "Win32_Foundation", "Win32_Globalization", "Win32_UI_Shell_Common"]
+features = ["Win32_Foundation", "Win32_Globalization", "Win32_System", "Win32_System_Com", "Win32_UI", "Win32_UI_Shell"]
 
 [features]
 default = ["home_dir"]
