--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "simple-home-dir"
-version = "0.3.5"
+version = "0.3.6"
 edition = "2021"
 
 license = "MIT"
@@ -15,7 +15,14 @@ version = "5.0.1"
 
 [target.'cfg(windows)'.dependencies.windows-sys]
 version = "0.52.0"
-features = ["Win32_Foundation", "Win32_Globalization", "Win32_System", "Win32_System_Com", "Win32_UI", "Win32_UI_Shell"]
+features = [
+    "Win32_Foundation",
+    "Win32_Globalization",
+    "Win32_System",
+    "Win32_System_Com",
+    "Win32_UI",
+    "Win32_UI_Shell",
+]
 
 [profile.release]
 lto = "thin"
