--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,21 @@
 [package]
 name = "simple-home-dir"
-version = "0.3.6"
+version = "0.4.0"
 edition = "2021"
-
 license = "MIT"
 repository = "https://github.com/splurf/simple-home-dir"
 authors = ["Evan Schwartzentruber <evandotschwartzentruber@gmail.com>"]
 description = "Efficiently retrieve the user's home directory."
 keywords = ["home", "directory", "fast", "path", "lightweight"]
 categories = ["accessibility"]
+exclude = [
+    ".github/",
+    ".gitignore",
+    "Cargo.toml.orig",
+    "LICENSE",
+    "README.md",
+    "tests/",
+]
 
 [dev-dependencies.dirs]
 version = "5.0.1"
@@ -25,5 +32,5 @@ features = [
 ]
 
 [profile.release]
-lto = "thin"
+lto = true
 codegen-units = 1
