--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -4,12 +4,15 @@ on:
   push:
     branches:
       - master
+  pull_request:
+    branches:
+      - master
 
 env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  test:
+  build:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -21,52 +24,3 @@ jobs:
         run: cargo build --verbose
       - name: Run tests
         run: cargo test --verbose
-
-  push:
-    runs-on: ubuntu-latest
-    needs: test
-
-    steps:
-      # Checkout the repository
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      # Set up Rust environment
-      - name: Set up Rust
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-
-      # Update dependencies in lock file
-      - name: Update Rust dependencies
-        run: cargo update
-
-      # Install cargo-edit
-      - name: Install cargo-edit
-        run: cargo install cargo-edit
-
-      # Update dependency versions
-      - name: Update Rust dependecy versions
-        run: cargo upgrade
-
-      # Install cargo-release
-      - name: Install cargo-release
-        run: cargo install cargo-release
-
-      # Bump package version
-      - name: Bump version and Push
-        run: cargo release patch --no-publish --no-confirm --execute
-        env:
-          CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
-
-  publish:
-    runs-on: ubuntu-latest
-    needs: push
-
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Publish to crates.io
-        run: cargo publish
-        env:
-          CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
